After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662465 - Translated strings do not appear translated
Translated strings do not appear translated
Status: RESOLVED FIXED
Product: brasero
Classification: Applications
Component: libbrasero-burn
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Brasero maintainer(s)
Brasero maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-10-22 16:04 UTC by Gabor Kelemen
Modified: 2012-02-08 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Trivial patch, call _() where array items are used (1.02 KB, patch)
2011-10-22 16:06 UTC, Gabor Kelemen
committed Details | Review

Description Gabor Kelemen 2011-10-22 16:04:35 UTC
When you add a directory to a data project with hidden files in it, the list of filtered files appears. Here in the Type column, the file types appear untranslated, despite being translated in the po files.

This is because the list of filtered file types is part of a string array, and the strings are marked for translation with the N_ macro. In such cases, you must call gettext() at the place where the array items are actually used. This does not happen in this case.

See also: http://www.gnu.org/software/gettext/manual/gettext.html#Special-cases
Comment 1 Gabor Kelemen 2011-10-22 16:06:12 UTC
Created attachment 199725 [details] [review]
Trivial patch, call _() where array items are used
Comment 2 Luis Medinas 2012-02-08 14:24:47 UTC
Review of attachment 199725 [details] [review]:

Please commit Gabor. Thanks
Comment 3 Gabor Kelemen 2012-02-08 15:27:44 UTC
Pushed.
Comment 4 Gabor Kelemen 2012-02-08 15:28:35 UTC
Review of attachment 199725 [details] [review]:

Committed, thanks for the green light.