Call gettext() where translated string array items are used.

https://bugzilla.gnome.org/show_bug.cgi?id=662465